--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TDD</string>
+    <string name="title">TDD</string>
+    <string name="sub_title">To Day Diary</string>
 </resources>
