Add activity_pick_month.xml Commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TDD</string>
     <string name="title">TDD</string>
     <string name="sub_title">To Day Diary</string>
+    <string name="month">Month</string>
 </resources>
