Completion activity_january.xml Commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,16 +4,48 @@
     <string name="sub_title">To Day Diary</string>
     <string name="month">Month</string>
 
-    <string name="btn_1">1</string>
-    <string name="btn_2">2</string>
-    <string name="btn_3">3</string>
-    <string name="btn_4">4</string>
-    <string name="btn_5">5</string>
-    <string name="btn_6">6</string>
-    <string name="btn_7">7</string>
-    <string name="btn_8">8</string>
-    <string name="btn_9">9</string>
-    <string name="btn_10">10</string>
-    <string name="btn_11">11</string>
-    <string name="btn_12">12</string>
+    <string name="january">january</string>
+    <string name="february">february</string>
+    <string name="march">3</string>
+    <string name="april">4</string>
+    <string name="may">5</string>
+    <string name="june">6</string>
+    <string name="july">7</string>
+    <string name="august">8</string>
+    <string name="september">9</string>
+    <string name="october">10</string>
+    <string name="november">11</string>
+    <string name="december">12</string>
+
+    <string name="btn_date_1">1</string>
+    <string name="btn_date_2">2</string>
+    <string name="btn_date_3">3</string>
+    <string name="btn_date_4">4</string>
+    <string name="btn_date_5">5</string>
+    <string name="btn_date_6">6</string>
+    <string name="btn_date_7">7</string>
+    <string name="btn_date_8">8</string>
+    <string name="btn_date_9">9</string>
+    <string name="btn_date_10">10</string>
+    <string name="btn_date_11">11</string>
+    <string name="btn_date_12">12</string>
+    <string name="btn_date_13">13</string>
+    <string name="btn_date_14">14</string>
+    <string name="btn_date_15">15</string>
+    <string name="btn_date_16">16</string>
+    <string name="btn_date_17">17</string>
+    <string name="btn_date_18">18</string>
+    <string name="btn_date_19">19</string>
+    <string name="btn_date_20">20</string>
+    <string name="btn_date_21">21</string>
+    <string name="btn_date_22">22</string>
+    <string name="btn_date_23">23</string>
+    <string name="btn_date_24">24</string>
+    <string name="btn_date_25">25</string>
+    <string name="btn_date_26">26</string>
+    <string name="btn_date_27">27</string>
+    <string name="btn_date_28">28</string>
+    <string name="btn_date_29">29</string>
+    <string name="btn_date_30">30</string>
+    <string name="btn_date_31">31</string>
 </resources>
